[package]
name = "gl2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
profile = ["mini/profile"]

[dependencies]
# win_window = { version = "0.1.0", path = "../../win_window" }
glfw = "0.52.0"
glow = "0.12.1"
mini = { version = "0.1.0", git = "https://github.com/zx3no/mini" }

# [profile.release]
# lto = true
# opt-level = "z"
# panic = "abort"
# strip = "debuginfo"