[package]
name = "vk2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
ash = { version = "0.38.0", features = ["linked", "debug"] }
# ash = { version = "0.38.0", features = ["debug"] }
mini = { version = "0.1.0", git = "https://github.com/zx3no/mini" }
window = { version = "0.1.0", git = "https://github.com/zx3no/window" }
